# Gzzzt

./: .gitignore  AUTHORS  README.md
doc/: Index.md  TODO  sound  soundstructure
src/: CMakeLists.txt  CPackConfig.cmake  astylerc
src/include/gzzzt/client/: Animation.h  ClientBomb.h  ClientEntity.h  ClientMap.h  ClientMapVisitor.h  ClientPlayer.h  ClientTCPManager.h  ClientUDPManager.h  Entity.h  Event.h  Resource.h  Sound.h  SoundHandler.h  World.h
src/include/gzzzt/server/: Body.h  Game.h  Physics.h  ServerBomb.h  ServerEntity.h  ServerMap.h  ServerMapVisitor.h  ServerPlayer.h  ServerPlayerList.h  ServerTCPManager.h  ServerUDPManager.h
src/include/gzzzt/shared/: Action.h  ActionRequest.h  ActionType.h  Block.h  ConcurrentQueue.h  DropBomb.h  ErrorResponse.h  GameStateResponse.h  IdentifyRequest.h  Log.h  Movement.h  NewPlayerRequest.h  NewPlayerResponse.h  Position.h  Random.h  Request.h  RequestType.h  Response.h  ResponseType.h  Serializable.h  Serializer.h  Speed.h  StartGameResponse.h  Vector.h
src/lib/gzzzt/: CMakeLists.txt
src/lib/gzzzt/client/: Animation.cc  CMakeLists.txt  ClientBomb.cc  ClientEntity.cc  ClientMap.cc  ClientMapVisitor.cc  ClientPlayer.cc  ClientTCPManager.cc  ClientUDPManager.cc  Entity.cc  Resource.cc  Sound.cc  SoundHandler.cc  World.cc
src/lib/gzzzt/server/: Body.cc  CMakeLists.txt  Game.cc  Physics.cc  ServerBomb.cc  ServerEntity.cc  ServerMap.cc  ServerMapVisitor.cc  ServerPlayer.cc  ServerPlayerList.cc  ServerTCPManager.cc  ServerUDPManager.cc
src/lib/gzzzt/shared/: Action.cc  ActionRequest.cc  Block.cc  CMakeLists.txt  DropBomb.cc  ErrorResponse.cc  GameStateResponse.cc  IdentifyRequest.cc  Log.cc  Movement.cc  NewPlayerRequest.cc  NewPlayerResponse.cc  Position.cc  Random.cc  Request.cc  Resource.cc  Response.cc  Serializer.cc  Speed.cc  StartGameResponse.cc
src/prototypes/: CMakeLists.txt  config.h.in
src/prototypes/physics/: CMakeLists.txt  physics.cc
src/prototypes/sounds/: CMakeLists.txt  sounds.cc
src/res/gzzzt/sound/: BombExplode.flac  Overheating.flac  ShutingDown.flac
src/share/gzzzt/: FILES
src/share/gzzzt/maps/simple/: basic.tmx  dumb.tmx  simple.tmx
tests/povray/: Makefile  robot.pov
tests/sounds/: ElecDmg01.flac  qubodupElectricityDamage02.flac
tests/sounds/cydark/: cydark-com1.flac  cydark-com4.flac  cydark-com5.flac  cydark-com6.flac  cydark-com7.flac  cydark-mechcom01.flac  cydark-mechcom02.flac  cydark-mechcom03.flac  cydark-mechcom04.flac  cydark-mechcom05.flac  cydark-mechcom06.flac  cydark-mechcom07.flac  cydark-mechcom08.flac  cydark-mechcom09.flac  cydark-mechcom10.flac  cydark-mechcom11.flac  cydark-mechcom12.flac  cydark-mechcom13.flac  cydark-mechcom14.flac  cydark-mechcom15.flac  cydark-mechcom16.flac  cydark-mechcom17.flac  cydark-mechcom18.flac  cydark-mechcom19.flac  cydark-mechcom20.flac  cydark-mechcom21.flac  cydark-mechcom22.flac  cydark-mechcom23.flac  cydark-mechcom24.flac  cydark-mechcom25.flac  cydark-mechcom26.flac  cydark-mechcom27.flac  cydark-mechcom28.flac  cydark-mechcom29.flac  cydark-ruscom1.flac  cydark-ruscom2.flac  cydark-ruscom3.flac  cydark-ruscom4.flac  cydark-saoc1.flac  cydark-saoc2.flac  (+2 more)
tests/sounds/cydark/unprocessed/: com1.flac  com2.flac  com3.flac  com4.flac  com5.flac  com6.flac  com7.flac  mechcom01.flac  mechcom02.flac  mechcom03.flac  mechcom04.flac  mechcom05.flac  mechcom06.flac  mechcom07.flac  mechcom08.flac  mechcom09.flac  mechcom10.flac  mechcom11.flac  mechcom12.flac  mechcom13.flac  mechcom14.flac  mechcom15.flac  mechcom16.flac  mechcom17.flac  mechcom18.flac  mechcom19.flac  mechcom20.flac  mechcom21.flac  mechcom22.flac  mechcom23.flac  mechcom24.flac  mechcom25.flac  mechcom26.flac  mechcom27.flac  mechcom28.flac  mechcom29.flac  ruscom1.flac  ruscom2.flac  ruscom3.flac  ruscom4.flac  (+3 more)
